@@ -21,8 +21,8 @@
 
 
 # This shell script needs to be sourced from Makefile processing,
-# otherwise set EXTSRCDIR and EXTDISTDIR before calling this script
-# AND make sure EXTDISTDIR exists with the right content.
+# otherwise set EXTSRCDIR, EXTDISTDIR and EXTWINDISTDIR before calling
+# this script AND make sure EXTDISTDIR exists with the right content.
 
 # check necessary vars:
 
@@ -44,42 +44,26 @@ if test ! -d "$EXTSRCDIR/build_windows"; then
 	exit 5
 fi
 
-# check where to place temporary files
-if test "x$TMPDIR" = "x"; then
-	if test "x$TMP" = "x"; then
-		if test "x$TEMP" = "x"; then
-			TMPDIR=/tmp
-		else
-			TMPDIR=$TEMP
-		fi
-	else
-		TMPDIR=$TMP
-	fi
-fi
-if test ! -d "$TMPDIR"; then
-	echo "TMPDIR $TMPDIR" does not exist, aborting $0
+if test "x$EXTWINDISTDIR" = "x"; then
+	echo "EXTWINDISTDIR" not set, aborting $0
 	exit 1
 fi
-export TMPDIR
+if test -d "$EXTWINDISTDIR"; then
+	rm -rf "$EXTWINDISTDIR"
+fi
 
-# create temporary folder as we don't want to change the EXTDISTDIR's content
-WINTMP=$TMPDIR/win-dist-$(date +%s)
-
-rm -r -f $WINTMP
-echo mkdir $WINTMP
-mkdir $WINTMP
-
-echo cp -p -r  $EXTDISTDIR $WINTMP
-cp -p -r $EXTDISTDIR $WINTMP || exit 1
+echo cp -p -r  "$EXTDISTDIR" "$EXTWINDISTDIR"
+cp -p -r "$EXTDISTDIR" "$EXTWINDISTDIR" || exit 1
 
 # add content only necessary for windows dist zip
-echo cp -p -r $EXTSRCDIR/build_windows $WINTMP/$EXTDISTDIR/
-cp -p -r $EXTSRCDIR/build_windows $WINTMP/$EXTDISTDIR/ || exit 2
-echo cp $EXTSRCDIR/tests/atlocal_win $WINTMP/$EXTDISTDIR/tests/atlocal_win
-cp $EXTSRCDIR/tests/atlocal_win $WINTMP/$EXTDISTDIR/tests/atlocal_win || exit 2
 
-olddir=$(pwd)
-cd $WINTMP/$EXTDISTDIR || exit 3
+echo rsync -av "$EXTSRCDIR/build_windows" "$EXTWINDISTDIR/"
+rsync -a "$EXTSRCDIR/build_windows" "$EXTWINDISTDIR/" --exclude=x64 --exclude=Win32 --exclude=".vs" --exclude=".ncb"  --exclude=".bak" --exclude=distnew
+echo cp "$EXTSRCDIR/tests/atlocal_win" "$EXTWINDISTDIR/tests/atlocal_win"
+cp "$EXTSRCDIR/tests/atlocal_win" "$EXTWINDISTDIR/tests/atlocal_win" || exit 2
+
+olddir="$(pwd)"
+cd "$EXTWINDISTDIR" || exit 3
 
 # rename templates for faster setup
 cd build_windows || exit 5
@@ -87,16 +71,18 @@ mv "config.h.in"   "config.h"
 mv "defaults.h.in" "defaults.h"
 cd ..
 
-# remove content not necessary for windows dist zip --> breaks make dist[check]
+# remove content not necessary for windows-only distribution --> breaks make dist[check]
 # rm -r -f m4
 
-# change line ending for files in zip-file
+# change line ending for files in windows distribution
 find -regextype posix-egrep -regex ".*(\.([chyl]|def|cpy|cob|conf|cfg)|(README|ChangeLog|AUTHORS|ABOUT-NLS|NEWS|THANKS|TODO|COPYING.*))$" \
  -exec sed -i -e 's/\r*$/\r/' {} \;
  
 # fix timestamps again
 chmod +x ./doc/cobcinfo.sh
-./doc/cobcinfo.sh "fixtimestamps"
+cd doc
+./cobcinfo.sh "fixtimestamps"
+cd ..
 touch "./bin/cobcrun.1"
 touch "./cobc/cobc.1"
 touch "./cobc/ppparse.c"
@@ -104,6 +90,8 @@ touch "./cobc/parser.c"
 #touch "./cobc/pplex.c"
 #touch "./cobc/scanner.c"
 #touch "./libcob/libcob.3"
+touch "./tests/testsuite"
+touch "./tests/testsuite_manual"
 
 # bugfix for old _MSC versions that define __STDC_VERSION__ >= 199901L but don't work correct
 for file in "./cobc/pplex.c" "./cobc/scanner.c"; do
@@ -114,13 +102,5 @@ for file in "./cobc/pplex.c" "./cobc/scanner.c"; do
 done
 cd .. # back in win-dist
 
-
-# create windows dist zip
-rm -f $EXTDISTDIR"_win.zip"
-zip -rq $olddir/$EXTDISTDIR"_win.zip" $EXTDISTDIR
-
-cd $olddir # back in starting directory
-
-# remove temporary folder
-rm -r -f $WINTMP
+cd "$olddir" # back in starting directory
 
